Release IoT-MD 2.5.0 stable
